--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -102,7 +102,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <button onclick="location.href='/admin/login'" class="btn btn-block btn-info" type="button">
-                    <span>Login Page</span>
+                    <span>Login</span>
                   </button>
                 </div>
               </div>
